[package]
authors = ["The Rust Project Developers"]
name = "rustc_lint_defs"
version = "0.0.0"
edition = "2018"

[dependencies]
log = { package = "tracing", version = "0.1" }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.59"
rustc_ast = { path = "../rustc_ast" }
rustc_data_structures = { path = "../rustc_data_structures" }
rustc_span = { path = "../rustc_span" }
rustc_serialize = { path = "../rustc_serialize" }
rustc_macros = { path = "../rustc_macros" }
rustc_target = { path = "../rustc_target" }
